--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,10 +1,23 @@
-{% for item in item_list %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'food/style.css' %}">
+</head>
+<body>
+    {% for item in item_list %}
 
     <ul>
         <li>
 
-            <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
+            <a href="{% url 'food:detail' item.id %}"> {{ item.id }} -- {{ item.item_name }} </a>
         </li>
     </ul>
 
 {% endfor %}
+</body>
+</html>
