--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
 </head>
 <body>
+
+    {% block body %}
+
     {% for item in item_list %}
+        <div class="row">
+            <div class="col-md-3 offset-md-2">
+                <img class="image" height="200px" src="{{ item.item_image }}">
+            </div>
+            <div class="col-md-4">
+                <h3>{{ item.item_name }}</h3>
+                <h5>{{ item.item_desc }}</h5>
+                <h6>${{ item.item_price }}</h6>
+            </div>
+            <div class="col-md-2">
+                <a href="{% url 'food:detail' item.id %}" class="btn btn-success">Details</a>
+            </div>
+        </div>
+
+    {% endfor %}
+    {% endblock %}
+
+    this is the old code
+
 
     <ul>
         <li>
 
-            <a href="{% url 'food:detail' item.id %}"> {{ item.id }} -- {{ item.item_name }} </a>
+            <a href=""> {{ item.id }} -- {{ item.item_name }} </a>
         </li>
     </ul>
 
-{% endfor %}
+
+
 </body>
 </html>
