--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -9,11 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-primary">
                 <a href="#" class="navbar-brand">Food App</a>
 
                 <div class="navbar">
-                    <a class="nav-item nav-link" href="#">Add Item</a>
+                    <a class="nav-item nav-link" href="{% url 'food:create_item' %}">Add Item</a>
                     <a class="nav-item nav-link" href="#">Delete Item</a>
                     <a class="nav-item nav-link" href="#">View Item</a>
                 </div>
