--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -9,16 +9,29 @@
     <title>Document</title>
 </head>
 <body>
-        <nav class="navbar navbar-dark bg-primary">
+        <nav class="navbar navbar-dark bg-danger">
                 <a href="#" class="navbar-brand">Food App</a>
 
                 <div class="navbar">
                     <a class="nav-item nav-link" href="{% url 'food:create_item' %}">Add Item</a>
                     <a class="nav-item nav-link" href="#">Delete Item</a>
                     <a class="nav-item nav-link" href="#">View Item</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}">Logout</a>
+                        <a href="{% url 'profile' %}">Profile</a>
+                    {% else %}
+                        <a href="{% url 'login' %}">Login</a>
+                    {% endif %}
                 </div>
             </nav>
+          {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
 
+            {% endfor %}
+          {% endif %}
     {% block body %}
     {% endblock %}
 </body>
